About section updated.

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -29,6 +29,9 @@
                     <a href="https://blog.nil.foundation">Blog</a>
                 </li>
                 <li class="page-scroll">
+                    <a href="#about">About</a>
+                </li>
+                <li class="page-scroll">
                     <a href="#projects">Projects</a>
                 </li>
                 <li class="page-scroll">
